--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   firebase_auth: ^5.3.1
   cloud_firestore: ^5.6.1
   intl: ^0.20.2
+  table_calendar: ^3.2.0
+  fl_chart: ^0.69.0
 
 dev_dependencies:
   flutter_test:
