--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,8 @@ dependencies:
   intl: ^0.20.2
   table_calendar: ^3.2.0
   fl_chart: ^0.69.0
+  firebase_storage: ^12.3.8
+  image_picker: ^1.1.2
 
 dev_dependencies:
   flutter_test:
